@@ -3,92 +3,83 @@ package s2d.textures
 import s2d.types.{Image, PixelFormat}
 import s2d.sdl2.SDL.*
 import s2d.sdl2.Extras.*
+import s2d.stb.all.*
 import scalanative.unsafe.*
 import scalanative.unsigned.*
 import scala.util.Using
-import scalanative.libc.{stdlib, string, stdio}
+import scalanative.libc.stdio.*
+import scalanative.libc.stdlib.*
+import scalanative.libc.string.*
 
 object Images:
   def load(fileName: String): Option[Image] =
-    Zone {
-      try
-        val fileNameCStr = toCString(fileName)
-        val surface = SDL_LoadBMP(fileNameCStr)
+    try
+      Zone {
+        val width = alloc[CInt](1)
+        val height = alloc[CInt](1)
+        val channels = alloc[CInt](1)
 
-        if surface == null then
-          None
+        val data = stbi_load(toCString(fileName), width, height, channels, 0)
+
+        if data != null then
+          val w = !width
+          val h = !height
+          val c = !channels
+
+          val format = c match
+            case 1 => PixelFormat.UncompressedGrayscale.value
+            case 2 => PixelFormat.UncompressedGrayAlpha.value
+            case 3 => PixelFormat.UncompressedRGB8.value
+            case 4 => PixelFormat.UncompressedR8G8B8A8.value
+            case _ => PixelFormat.UncompressedR8G8B8A8.value
+
+          Some(Image(data.asInstanceOf[Ptr[Byte]], w, h, 1, format))
         else
-          try
-            val w = surface._3
-            val h = surface._4
-            val pixels = surface._6
-            val pitch = surface._8
-            val pixelFormat = surface._2
-
-            val bytesPerPixel = if pixelFormat != null then
-              SDL_BYTESPERPIXEL(pixelFormat._1)  // format field
-            else 4.toUByte
-
-            val format = bytesPerPixel match
-              case x if x == 1.toUByte => PixelFormat.UncompressedGrayscale.value
-              case x if x == 2.toUByte => PixelFormat.UncompressedGrayAlpha.value
-              case x if x == 3.toUByte => PixelFormat.UncompressedRGB8.value
-              case x if x == 4.toUByte => PixelFormat.UncompressedR8G8B8A8.value
-              case _ => PixelFormat.UncompressedR8G8B8A8.value
-
-            val dataSize = h * pitch
-
-            val imageData = stdlib.malloc(dataSize.toUSize).asInstanceOf[Ptr[Byte]]
-            if imageData != null then
-              string.memcpy(imageData, pixels, dataSize.toUSize)
-              Some(Image(imageData, w, h, 1, format))
-            else
-              None
-          finally
-            SDL_FreeSurface(surface)
-      catch
-        case _: Exception => None
-    }
+          None
+      }
+    catch
+      case _: Exception => None
 
   def loadRaw(fileName: String, width: Int, height: Int, format: Int, headerSize: Int): Option[Image] =
-    Zone {
-        try
-          val fileNameCStr = toCString(fileName)
-          val file = stdio.fopen(fileNameCStr, c"rb")
+    try
+      Zone {
+        val file = fopen(toCString(fileName), c"rb")
+        if file == null then
+          return None
 
-          if file == null then
+        try
+          fseek(file, 0, SEEK_END)
+          val fileSize = ftell(file)
+          fseek(file, 0, SEEK_SET)
+
+          if fileSize <= headerSize then
             return None
 
-          try
-            stdio.fseek(file, 0, stdio.SEEK_END)
-            val fileSize = stdio.ftell(file)
-            stdio.fseek(file, 0, stdio.SEEK_SET)
+          val pixelFormat = PixelFormat.fromValue(format).getOrElse(PixelFormat.UncompressedR8G8B8A8)
+          val expectedDataSize = width * height * pixelFormat.bytesPerPixel
+          val availableDataSize = fileSize - headerSize
 
-            if fileSize <= headerSize then
-              return None
+          if availableDataSize < expectedDataSize then
+            return None
 
-            val pixelFormat = PixelFormat.fromValue(format).getOrElse(PixelFormat.UncompressedR8G8B8A8)
-            val expectedDataSize = width * height * pixelFormat.bytesPerPixel
-            val availableDataSize = fileSize - headerSize
+          val pixelData = malloc(expectedDataSize.toLong)
+          if pixelData == null then
+            return None
 
-            if availableDataSize < expectedDataSize then
-              return None
+          fseek(file, headerSize, SEEK_SET)
 
-            if headerSize > 0 then
-              stdio.fseek(file, headerSize, stdio.SEEK_SET)
+          val bytesRead = fread(pixelData, 1.toCSize, expectedDataSize.toCSize, file)
+          if bytesRead != expectedDataSize then
+            free(pixelData)
+            return None
 
-            val imageData = stdlib.malloc(expectedDataSize.toUSize).asInstanceOf[Ptr[Byte]]
-            if imageData == null then
-              return None
+          Some(Image(pixelData.asInstanceOf[Ptr[Byte]], width, height, 1, format))
+        finally
+          fclose(file)
+      }
+    catch
+      case _: Exception => None
 
-            val bytesRead = stdio.fread(imageData, 1.toUSize, expectedDataSize.toUSize, file)
-            if bytesRead != expectedDataSize.toUSize then
-              stdlib.free(imageData)
-              return None
-
-            Some(Image(imageData, width, height, 1, format))
-          finally
-            stdio.fclose(file)
-        catch
-          case _: Exception => None
-    }
+  def unload(image: Image): Unit =
+    if image.data != null then
+      free(image.data.asInstanceOf[Ptr[Byte]])
